<resources>
    <string name="app_name">GROUP14</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu_screen">MenuScreen</string>
    <string name="gps">gps</string>
    <string name="message">message</string>
    <string name="call">call</string>
    <string name="next">next</string>
    <string name="title_activity_call_first">CallFirst</string>
    <string name="txt">txt</string>
    <string name="title_activity_call_menu">callMenu</string>
    <string name="callRecords">Get Previous Call Records</string>
    <string name="title_activity_call_analysis">CallAnalysis</string>
    <string name="callAnalysis">Call Analysis</string>
    <string name="count">count</string>
    <string name="getRecords">getRecords</string>
    <string name="callCount" />
    <string name="callBtn">Get Call Records</string>
    <string name="CountTXT" />
    <string name="title_activity_call_analysis_display">CallAnalysisDisplay</string>
    <string name="CallCountTXT" />
    <string name="CallCountBTN">Get Records</string>
    <string name="recordBtn">All Calls</string>
    <string name="frequentCallBtn">Most Frequent Calls</string>
    <string name="title_activity_notification_contact">notificationContact</string>
    <string name="contact" />
    <string name="addNotification">Add Notification</string>
    <string name="AddNotificationBTn">Add Notification</string>
    <string name="title_activity_screen1">Screen1</string>
    <string name="title_activity_call_logs_screen">CallLogsScreen</string>
    <string name="title_activity_display_recent_locations">DisplayRecentLocations</string>
    <string name="title_activity_maps">Map</string>
    <string name="heading">Enter  the Contactno. to send notifications</string>
    <string name="Blocked_Contact">Blocked Contact</string>
    <string name="head">Enter with Country Code</string>
    <string name="title_activity_login">Login</string>
    <string name="Email">Email</string>
    <string name="Login">Login</string>
    <string name="password">password</string>
    <string name="password_user">password_user</string>
    <string name="title_activity_signup">Signup</string>
    <string name="email_signup">email_signup</string>
    <string name="password_signup">password_signup</string>
    <string name="SignUP">SignUP</string>
    <string name="SignUP_Login">SignUP_login</string>
    <string name="title_activity_message_api">MessageAPI</string>
    <string name="title_activity_read_received">readReceived</string>
    <string name="title_activity_read_sent">read_sent</string>
    <string name="title_activity_message_add_no">Message_addNo</string>
    <string name="title_activity_messages_add_content">Messages_addContent</string>
    <string name="title_activity_message__specified_duration">Message_SpecifiedDuration</string>
    <string name="title_activity_show_specified_duration">showSpecifiedDuration</string>
</resources>
