<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CallMenu"
    tools:showIn="@layout/activity_call_menu"
    android:background="#a7d5d7ff">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/callRecords"
        android:id="@+id/button5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="117dp"
        android:onClick="previousCallLogsActivity" />




    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddNotificationBTn"
        android:id="@+id/button12"
        android:onClick="addNotificationContact"
        android:layout_below="@+id/button6"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Blocked_Contact"
        android:id="@+id/button13"
        android:layout_above="@+id/button6"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:onClick="doCalls" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/callAnalysis"
        android:id="@+id/button6"
        android:layout_centerVertical="true"
        android:onClick="callAnalysis"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_alignRight="@+id/button5"
        android:layout_alignEnd="@+id/button5" />
</RelativeLayout>
