<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.goyal.group14.CallAnalysisDisplay"
    tools:showIn="@layout/activity_call_analysis_display"
    android:background="#a7d5d7ff">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/CallCountTXT"
        android:layout_marginTop="50dp"
        android:text="@string/CallCountTXT"
        android:hint="Enter the count"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CallCountBTN"
        android:id="@+id/button8"
        android:onClick="CountedCallsRetrieve"
        android:layout_alignBottom="@+id/CallCountTXT"
        android:layout_alignRight="@+id/button10"
        android:layout_alignEnd="@+id/button10" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrolviewID"
        android:layout_below="@+id/button8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:shrinkColumns="*"
            android:stretchColumns="*" >
        </TableLayout>
    </ScrollView>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordBtn"
        android:id="@+id/button9"
        android:onClick="getAllCallsRetrieve"
        android:layout_alignBottom="@+id/button10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/button10"
        android:layout_toStartOf="@+id/button10" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequentCallBtn"
        android:id="@+id/button10"
        android:onClick="getMostFrequentCallsRetrieve"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/scrolviewID"
        android:layout_alignEnd="@+id/scrolviewID" />

</RelativeLayout>
